[project]
name = "nonebot_plugin_brainfuck"
version = "1.0.0"
description = "brainfuck"
authors = [
    {name = "campanula", email = "campanulamediuml@gmail.com"},
]
license-expression = "MIT"
dependencies = ["nonebot2>=1.1.2", "nonebot-adapter-onebot>=1.1.2"]
requires-python = ">=3.7"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/campanulamediuml/nonebot-plugin-brainfuck"
Repository = "https://github.com/campanulamediuml/nonebot-plugin-brainfuck"


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"